--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.4.1",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "0.16.7",
-    "unplugin-vue-components": "0.25.2"
+    "unplugin-vue-components": "0.25.2",
+    "vue-router": "^4.4.5"
   }
 }
