--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "front-end",
+  "name": "purweb",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
