--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "1.x",
     "core-js": "^3.8.3",
     "element-plus": "^2.8.7",
+    "unplugin-icons": "0.14.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
