--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "1.x",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.7",
     "unplugin-icons": "0.14.1",
+    "unplugin-vue-components": "0.25.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -34,7 +36,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
     "typescript": "~4.5.5",
-    "unplugin-auto-import": "0.16.7",
-    "unplugin-vue-components": "0.25.2"
+    "unplugin-auto-import": "0.16.7"
   }
 }
